# agi-mcp-agent

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.frontend  GIT_SUBMISSION.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  example.env  generate_requirements.py  init.sh  pyproject.toml  requirements.txt  setup.py  start_server.py
agi_mcp_agent/: __init__.py
agi_mcp_agent/agent/: __init__.py  base.py  llm_agent.py
agi_mcp_agent/api/: __init__.py  server.py
agi_mcp_agent/browser_extension/: background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js  recommendations.html  recommendations.js  styles.css
agi_mcp_agent/environment/: __init__.py  api_environment.py  base.py  browser_mcp_environment.py  database_environment.py  filesystem_environment.py  mcp_environment.py  memory_environment.py  web_environment.py
agi_mcp_agent/mcp/: __init__.py  browser_mcp_server.py  core.py  llm_models.py  llm_service.py  models.py  repository.py
agi_mcp_agent/models/: llm_provider.py
agi_mcp_agent/repositories/: llm_provider_repository.py
agi_mcp_agent/utils/: __init__.py  config.py
agi_mcp_agent/workflow/: __init__.py  (+2 more)
docs/: mcp_agent_design.md
examples/: database_llm_providers.py  environment_usage.py  llm_example.py  llm_providers_usage.py  mcp_example.py  memory_environment_usage.py  model_selector.py  workflow_example.py
frontend/: next.config.ts  package.json
migrations/: env.py
scripts/: __init__.py  db_init.py  db_test.py  start_server.py
sql/: init.sql
tests/: test_llm_providers.py
(+87 files in other folders)
